[package]
name = "transform"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.1"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
time = { version = "0.3.37", features = ["formatting", "parsing"] }
tokio = { version = "1.42.0", features = ["full"] }
